// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update TuiTableDirectionOrder warning adds TODO for TuiTableDirectionOrder import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiTableDirectionOrder} from '@taiga-ui/addon-table';

                @Component({
                    standalone: true,
                    imports: [TuiTableDirectionOrder],
                    templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiTableDirectionOrder has been removed. Use (tuiSortChange) output from TuiSortBy directive with TuiSortDirection instead
                import {TuiTableDirectionOrder} from '@taiga-ui/addon-table';

                @Component({
                    standalone: true,
                    imports: [TuiTableDirectionOrder],
                    templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update TuiTableDirectionOrder warning migrates dynamic [directionOrder] binding and removes tuiDirectionOrder marker: test.html 1`] = `
{
  "0. Before": "
                <table
                    tuiDirectionOrder
                    tuiTable
                    [directionOrder]="directionOrder"
                    (directionOrderChange)="onOrderChange($event)"
                >
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tuiDirectionOrder has been removed. [directionOrder] → [direction] (TuiSortDirection enum: Asc=1, Desc=-1). (directionOrderChange) → (directionChange) -->
<table
                    
                    tuiTable
                    [direction]="directionOrder"
                    (directionChange)="onOrderChange($event)"
                >
                    <tbody></tbody>
                </table>
            ",
}
`;

exports[`ng-update TuiTableDirectionOrder warning migrates static [directionOrder] values to TuiSortDirection numbers: test.html 1`] = `
{
  "0. Before": "
                <table tuiTable tuiDirectionOrder [directionOrder]="'asc'">
                    <tbody></tbody>
                </table>
                <table tuiTable tuiDirectionOrder [directionOrder]="'desc'">
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tuiDirectionOrder has been removed. [directionOrder] → [direction] (TuiSortDirection enum: Asc=1, Desc=-1). (directionOrderChange) → (directionChange) -->
<table tuiTable  [direction]="1">
                    <tbody></tbody>
                </table>
                <!-- TODO: (Taiga UI migration) tuiDirectionOrder has been removed. [directionOrder] → [direction] (TuiSortDirection enum: Asc=1, Desc=-1). (directionOrderChange) → (directionChange) -->
<table tuiTable  [direction]="-1">
                    <tbody></tbody>
                </table>
            ",
}
`;

exports[`ng-update TuiTableDirectionOrder warning migrates two-way [(directionOrder)] binding: test.html 1`] = `
{
  "0. Before": "
                <table tuiTable tuiDirectionOrder [(directionOrder)]="directionOrder">
                    <tbody></tbody>
                </table>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tuiDirectionOrder has been removed. [directionOrder] → [direction] (TuiSortDirection enum: Asc=1, Desc=-1). (directionOrderChange) → (directionChange) -->
<table tuiTable  [(direction)]="directionOrder">
                    <tbody></tbody>
                </table>
            ",
}
`;
